kube/example-2/counter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /counter
            backend:
              service:
                name: counter
                port:
                  number: 8000
